// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPokemonNames shall return all cyan pokemon 1`] = `
[
  "CLEFABLE",
  "DODRIO",
  "FERALIGATR",
  "CLEFAIRY",
  "DODUO",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "SWABLU",
  "BLASTOISE",
  "DELIBIRD",
  "SQUIRTLE",
  "WARTORTLE",
  "WIGGLYTUFF",
  "GOLDUCK",
  "SLOWBRO",
  "VAPOREON",
  "SLOWKING",
  "TOGEKISS",
  "SYLVEON",
  "JIGGLYPUFF",
  "PSYDUCK",
  "SLOWPOKE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
]
`;

exports[`getPokemonNames shall return all lapis pokemon 1`] = `
[
  "PRIMEAPE",
  "MEGANIUM",
  "MANKEY",
  "CHIKORITA",
  "BAYLEEF",
  "VENUSAUR",
  "VICTREEBEL",
  "MR_MIME",
  "BEWEAR",
  "BULBASAUR",
  "IVYSAUR",
  "BELLSPROUT",
  "WEEPINBELL",
  "MIME_JR",
  "STUFFUL",
  "ESPEON",
  "WOBBUFFET",
  "GARDEVOIR",
  "LUCARIO",
  "LEAFEON",
  "GALLADE",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all pokemon by default 1`] = `
[
  "BUTTERFREE",
  "RATICATE",
  "ARBOK",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "ALTARIA",
  "BANETTE",
  "WALREIN",
  "CATERPIE",
  "METAPOD",
  "RATTATA",
  "EKANS",
  "PIKACHU",
  "CLEFAIRY",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "HOUNDOUR",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "ABOMASNOW",
  "VENUSAUR",
  "GOLEM",
  "BLASTOISE",
  "VICTREEBEL",
  "ABSOL",
  "GENGAR",
  "DITTO",
  "DUGTRIO",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "KANGASKHAN",
  "CHARIZARD",
  "PINSIR",
  "TOXICROAK",
  "MR_MIME",
  "DRAGONITE",
  "BEWEAR",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "DRATINI",
  "DRAGONAIR",
  "LARVITAR",
  "MIME_JR",
  "CROAGUNK",
  "SNOVER",
  "STUFFUL",
  "PIKACHU_CHRISTMAS",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "HERACROSS",
  "GARDEVOIR",
  "SABLEYE",
  "SWALOT",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "SYLVEON",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "RALTS",
  "KIRLIA",
  "GULPIN",
  "WYNAUT",
  "BONSLY",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all pokemon for multiple islands 1`] = `
[
  "RATICATE",
  "CLEFABLE",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "RATTATA",
  "CLEFAIRY",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "HOUNDOUR",
  "SLAKOTH",
  "SWABLU",
  "SPHEAL",
  "SEALEO",
  "ABOMASNOW",
  "VENUSAUR",
  "GOLEM",
  "BLASTOISE",
  "VICTREEBEL",
  "ABSOL",
  "DITTO",
  "DUGTRIO",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "KANGASKHAN",
  "CHARIZARD",
  "MR_MIME",
  "BEWEAR",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "MIME_JR",
  "SNOVER",
  "STUFFUL",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "FLAREON",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "GARDEVOIR",
  "SABLEYE",
  "LUCARIO",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "SYLVEON",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "BONSLY",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all snowdrop pokemon 1`] = `
[
  "RATICATE",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "RATTATA",
  "HOUNDOUR",
  "SLAKOTH",
  "SPHEAL",
  "SEALEO",
  "ABOMASNOW",
  "ABSOL",
  "DITTO",
  "TYRANITAR",
  "KANGASKHAN",
  "SNOVER",
  "PERSIAN",
  "UMBREON",
  "SABLEYE",
  "GLACEON",
  "MEOWTH",
  "EEVEE",
]
`;

exports[`getPokemonNames shall return all taupe pokemon 1`] = `
[
  "ONIX",
  "MAROWAK",
  "TYPHLOSION",
  "CUBONE",
  "CYNDAQUIL",
  "QUILAVA",
  "GOLEM",
  "DUGTRIO",
  "PUPITAR",
  "CHARIZARD",
  "CHARMANDER",
  "CHARMELEON",
  "DIGLETT",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "ARCANINE",
  "FLAREON",
  "SUDOWOODO",
  "GROWLITHE",
  "BONSLY",
]
`;
